BaSP-W03-2022: Header and Who transformed to responsive

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -33,7 +33,7 @@
             <p>Trackgenix</p>
             <i class="fa-solid fa-angle-left fa-xl"></i>
         </div>
-            <nav id="option-aside">
+        <nav id="option-aside">
                     <a class="menu-option" href="">
                         <i class="fa-solid fa-house fa-lg"></i>
                         <p class="text-aside">Home</p>
@@ -46,23 +46,23 @@
                         <i class="fa-solid fa-user fa-lg"></i>
                         <p class="text-aside">LogIn</p>
                     </a>
-            </nav>
-            <div id="contact-aside">
-                <h3>Contact Us</h3>
+        </nav>
+        <div id="contact-aside">
+                <p>Contact Us</p>
                 <div class="line-orange"></div>
-                    <a class="contact-option" href="https://mail.google.com" target="_blank">
-                        <i class="fa-regular fa-envelope fa-xl"></i>
-                        <p class="text-aside">trackgenix@gmail.com</p>
-                    </a>
-                    <a class="contact-option" href="">
-                        <i class="fa-solid fa-phone fa-xl"></i>
-                        <p class="text-aside">(000) 000-0000</p>
-                    </a>
-                    <a class="contact-option" href="">
-                        <i id="location-icon" class="fa-solid fa-location-dot fa-xl"></i>
-                        <p class="text-aside">1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
-                    </a>
-            </div>
+                <a class="contact-option" href="https://mail.google.com" target="_blank">
+                    <i class="fa-regular fa-envelope fa-xl"></i>
+                    <p class="text-aside">trackgenix@gmail.com</p>
+                </a>
+                <a class="contact-option" href="">
+                    <i class="fa-solid fa-phone fa-xl"></i>
+                    <p class="text-aside">(000) 000-0000</p>
+                </a>
+                <a class="contact-option" href="">
+                    <i id="location-icon" class="fa-solid fa-location-dot fa-xl"></i>
+                    <p class="text-aside">1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+                </a>
+        </div>
     </aside>
     <header>
         <div id="text-header">
