BaSP-W03-2022: Why transformed to responsive

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -124,7 +124,7 @@
                 <div class="title-bar"></div>
                 <div class="text-why-left">
                     <h3 class="title">Productivity Booster</h3>
-                    <div class="subtitle-bar"></div>
+                    <div id="subtitle-bar-blue" class="subtitle-bar"></div>
                     <p class="p-why-left">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the
@@ -142,7 +142,7 @@
                 <img class="img-why-left" src="assets/work-traceability.png" alt="work Traceability">
                 <div class="text-why-right">
                     <h3 class="title">Work Traceability</h3>
-                    <div class="subtitle-bar-right"></div>
+                    <div class="subtitle-bar subtitle-bar-right"></div>
                     <p class="p-why-right">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the
@@ -157,7 +157,7 @@
             <div id="management-section">
                 <div class="text-why-left">
                     <h3 class="title">Leadership and team management</h3>
-                    <div id="subtitle-bar-grey"></div>
+                    <div id="subtitle-bar-grey" class="subtitle-bar"></div>
                     <p class="p-why-left">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, aliquam neque corporis deserunt
                         exercitationem quos tenetur hic dignissimos quas nemo minima aspernatur consequatur similique.
@@ -172,7 +172,7 @@
                 <img class="img-why-left" src="assets/decision-making.png" alt="Decision making">
                 <div class="text-why-right">
                     <h3 class="title">Decision making</h3>
-                    <div class="subtitle-bar-right"></div>
+                    <div class="subtitle-bar subtitle-bar-right"></div>
                     <p class="p-why-right">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, aspernatur eaque consequatur
                         molestiae
