--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -188,47 +188,43 @@
             <h2 class="title">Functionalities</h2>
             <div class="title-bar"></div>
             <div id="hours-log">
-                <img class="image-zoom" class="img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
+                <img class="image-zoom img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
                 <div class="text-functionalities">
                     <h4>Hours log</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
-                        deleniti
-                        molestias, pariatur maiores id et officia.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard.
                     </p>
                 </div>
             </div>
             <div id="resource-management">
-                <img class="image-zoom" class="img-functionalities" src="assets/Icons/resource-management.png"
+                <img class="image-zoom img-functionalities" src="assets/Icons/resource-management.png"
                  alt="Resource management">
                 <div class="text-functionalities">
                     <h4>Resource management</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
-                        deleniti
-                        molestias, pariatur maiores id et officia.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard.
                     </p>
                 </div>
             </div>
             <div id="reports">
-                <img class="image-zoom" class="img-functionalities" src="assets/Icons/reports.png" alt="Reports">
+                <img class="image-zoom img-functionalities" src="assets/Icons/reports.png" alt="Reports">
                 <div class="text-functionalities">
                     <h4>Reports</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
-                        deleniti
-                        molestias, pariatur maiores id et officia.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard.
                     </p>
                 </div>
             </div>
             <div id="multiple-roles">
-                <img class="image-zoom" class="img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
+                <img class="image-zoom img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
                 <div class="text-functionalities">
                     <h4>Multiple roles</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
-                        deleniti
-                        molestias, pariatur maiores id et officia.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard.
                     </p>
                 </div>
             </div>
