BaSP-W03-2022: Why choose us and Functionalities adapted to mobile

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -196,45 +196,47 @@
         <section id="functionalities">
             <h2 class="title">Functionalities</h2>
             <div class="title-bar"></div>
-            <div id="hours-log">
-                <img class="image-zoom img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
-                <div class="text-functionalities">
-                    <h4>Hours log</h4>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard.
-                    </p>
+            <div id="functionalities-content">
+                <div id="hours-log">
+                    <img class="image-zoom img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
+                    <div class="text-functionalities">
+                        <h4>Hours log</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div id="resource-management">
-                <img class="image-zoom img-functionalities" src="assets/Icons/resource-management.png"
-                    alt="Resource management">
-                <div class="text-functionalities">
-                    <h4>Resource management</h4>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard.
-                    </p>
+                <div id="resource-management">
+                    <img class="image-zoom img-functionalities" src="assets/Icons/resource-management.png"
+                        alt="Resource management">
+                    <div class="text-functionalities">
+                        <h4>Resource management</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div id="reports">
-                <img class="image-zoom img-functionalities" src="assets/Icons/reports.png" alt="Reports">
-                <div class="text-functionalities">
-                    <h4>Reports</h4>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard.
-                    </p>
+                <div id="reports">
+                    <img class="image-zoom img-functionalities" src="assets/Icons/reports.png" alt="Reports">
+                    <div class="text-functionalities">
+                        <h4>Reports</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div id="multiple-roles">
-                <img class="image-zoom img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
-                <div class="text-functionalities">
-                    <h4>Multiple roles</h4>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard.
-                    </p>
+                <div id="multiple-roles">
+                    <img class="image-zoom img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
+                    <div class="text-functionalities">
+                        <h4>Multiple roles</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
