BaSP-W03-2022: Responsive finished

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -15,11 +15,6 @@
     <link rel="stylesheet" type="text/css" href="css/aside-style.css">
     <link rel="stylesheet" type="text/css" href="css/header-style.css">
     <link rel="stylesheet" type="text/css" href="css/main-style.css">
-    <link rel="stylesheet" type="text/css" href="css/who-main-style.css">
-    <link rel="stylesheet" type="text/css" href="css/why-main-style.css">
-    <link rel="stylesheet" type="text/css" href="css/func-main-style.css">
-    <link rel="stylesheet" type="text/css" href="css/contact-main-style.css">
-    <link rel="stylesheet" type="text/css" href="css/more-main-style.css">
     <link rel="stylesheet" type="text/css" href="css/footer-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,6 +64,7 @@
         </aside>
         <div class="wrapper-inner">
             <header>
+                <div id="aside-btn-mobile"><i class="fa-sharp fa-solid fa-bars"></i></div>
                 <div id="text-header">
                     <h1>Trackgenix</h1>
                     <div class="line-green"></div>
