BaSP-W04-2022: Some Fixes from week 03

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -11,11 +11,11 @@
     <script src="https://kit.fontawesome.com/d7c9d962f7.js" crossorigin="anonymous"></script>
     <title>Trackgenix</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/general-style.css">
-    <link rel="stylesheet" type="text/css" href="css/aside-style.css">
-    <link rel="stylesheet" type="text/css" href="css/header-style.css">
-    <link rel="stylesheet" type="text/css" href="css/main-style.css">
-    <link rel="stylesheet" type="text/css" href="css/footer-style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/aside.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -260,13 +260,16 @@
                         </div>
                         <div id="textarea">
                             <label class="label-contact" for="message">Message</label>
-                            <textarea id="message" name="message" placeholder="Your Message Here"></textarea>
+                            <textarea name="message" placeholder="Your Message Here"></textarea>
                         </div>
                         <div id="btn-form">
-                            <button type="submit" id="submit-btn"><i id="email-icon" class="fa-regular fa-envelope fa-sm"></i>
-                                Send message</button>
+                            <button type="submit" id="submit-btn"><i id="email-icon"
+                                class="fa-regular fa-envelope fa-sm"></i>
+                                Send message
+                            </button>
                             <button type="reset" id="reset-btn"><i id="cross-icon" class="fa-solid fa-xmark fa-sm"></i>
-                                Reset</button>
+                                Reset
+                            </button>
                         </div>
                     </form>
                 </section>
