BaSP-W04-2022: Start fixing de max/min, having a lot of problems

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -247,12 +247,15 @@
                                 <label class="label-contact" for="name">Name</label>
                                 <input type="text" id="name" name="name" placeholder="Your Name Here">
                             </div>
-                            <select required>
-                                <option value="Contact area" selected disabled hidden>Contact area</option>
-                                <option value="Human Resources">Human Resources</option>
-                                <option value="Systems">Systems</option>
-                                <option value="Commercialization">Commercialization</option>
-                            </select>
+                            <div>
+                                <label class="label-contact" for="contact-area">Contact area</label>
+                                <select name="contact-area" required>
+                                    <option value="Contact area" selected disabled hidden>Contact area</option>
+                                    <option value="Human Resources">Human Resources</option>
+                                    <option value="Systems">Systems</option>
+                                    <option value="Commercialization">Commercialization</option>
+                                </select>
+                            </div>
                         </div>
                         <div>
                             <label class="label-contact" for="email">Email</label>
