BaSP-W04-2022: Line corrections

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -70,13 +70,13 @@
                     <div class="line-green"></div>
                     <h2>By GigaTech Software Solutions SA</h2>
                     <p>
-                        "The company GigaTech Software Solutions SA provides software development services to other companies,
-                        which
+                        "The company GigaTech Software Solutions SA provides software development services to other
+                        companies, which
                         have too many employees. Because of this "Trackgenix" was created.
                     </p>
                     <p>
-                        “Trackgenix” is a web page that facilitates the registration of hours worked by each employee in each
-                        project and provides information to the companies so they can make better decisions.
+                        “Trackgenix” is a web page that facilitates the registration of hours worked by each employee
+                        in each project and provides information to the companies so they can make better decisions.
                     </p>
                 </div>
             </header>
@@ -85,37 +85,22 @@
                     <h2 class="title">Who We Are</h2>
                     <div class="title-bar"></div>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                        industry's
-                        standard dummy text ever since the 1500s, when
-                        an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum
-                        is
-                        simply
-                        dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                        dummy
-                        text
-                        ever since the 1500s, when
-                        an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum
-                        is
-                        simply
-                        dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                        dummy
-                        text
-                        ever since the 1500s, when
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                        been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                        galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text
+                        of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+                        make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
                         an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                     <p id="text-green">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                        industry's
-                        standard dummy text ever since the 1500s, when
-                        an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum
-                        is
-                        simply
-                        dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                        dummy
-                        text
-                        ever since the 1500s, when
-                        an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                        been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                         galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text
+                         of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+                        make a type specimen book.
                     </p>
                 </section>
                 <section id="why-choose-us">
@@ -126,14 +111,9 @@
                             <h3 class="title">Productivity Booster</h3>
                             <div id="subtitle-bar-blue" class="subtitle-bar"></div>
                             <p class="p-why-left">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                                the
-                                industry's
-                                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                                scrambled it
-                                to
-                                make
-                                a type specimen book.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.
                             </p>
                         </div>
                         <div class="img-why-right-cont">
@@ -148,12 +128,9 @@
                             <h3 class="title">Work Traceability</h3>
                             <div class="subtitle-bar subtitle-bar-right"></div>
                             <p class="p-why-right">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                                the
-                                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                                type
-                                and
-                                scrambled it to make a type specimen book.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.
                             </p>
                         </div>
                     </div>
@@ -162,11 +139,9 @@
                             <h3 class="title">Leadership and team management</h3>
                             <div id="subtitle-bar-grey" class="subtitle-bar"></div>
                             <p class="p-why-left">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, aliquam neque corporis deserunt
-                                exercitationem quos tenetur hic dignissimos quas nemo minima aspernatur consequatur similique.
-                                Unde
-                                quas
-                                ullam blanditiis dolores officia!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, aliquam neque corporis
+                                 deserunt exercitationem quos tenetur hic dignissimos quas nemo minima aspernatur
+                                 consequatur similique. Unde quas ullam blanditiis dolores officia!
                             </p>
                         </div>
                         <div class="img-why-right-cont">
@@ -181,12 +156,9 @@
                             <h3 class="title">Decision making</h3>
                             <div class="subtitle-bar subtitle-bar-right"></div>
                             <p class="p-why-right">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, aspernatur eaque consequatur
-                                molestiae
-                                expedita, aut qui natus eius optio sapiente libero autem voluptas quos quis quia possimus
-                                ducimus!
-                                Facilis,
-                                eius?
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, aspernatur eaque
+                                consequatur molestiae expedita, aut qui natus eius optio sapiente libero autem voluptas
+                                 quos quis quia possimus ducimus! Facilis, eius?
                             </p>
                         </div>
                     </div>
@@ -196,7 +168,8 @@
                     <div class="title-bar"></div>
                     <div id="functionalities-content">
                         <div id="hours-log">
-                            <img class="image-zoom img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
+                            <img class="image-zoom img-functionalities"
+                            src="assets/Icons/hours-log.png" alt="Hours Log">
                             <div class="text-functionalities">
                                 <h4>Hours log</h4>
                                 <p>
@@ -227,7 +200,8 @@
                             </div>
                         </div>
                         <div id="multiple-roles">
-                            <img class="image-zoom img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
+                            <img class="image-zoom img-functionalities"
+                            src="assets/Icons/multiple-roles.png" alt="Multiple roles">
                             <div class="text-functionalities">
                                 <h4>Multiple roles</h4>
                                 <p>
